--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,89 @@
 </head>
 <body>
     <h1>Gmail backup</h1>
+        <div id="target"></div>
+
+    <script>
+        const targetDiv = document.querySelector('#target');
+        const barFill = document.querySelector("#bar-fill");
+
+        /**
+        * Split the stream
+        * @param {*} splitOn 
+        */
+        function splitStream(splitOn) {
+            let buffer = '';
+
+            return new TransformStream({
+                transform(chunk, controller) {
+                    buffer += chunk;
+                    const parts = buffer.split(splitOn);
+                    parts.slice(0, -1).forEach(part => controller.enqueue(part));
+                    buffer = parts[parts.length - 1];
+                },
+                flush(controller) {
+                    if (buffer) controller.enqueue(buffer);
+                }
+            });
+        }
+
+        /**
+        * Parse the NDJSON results
+        */
+        function parseJSON() {
+            return new TransformStream({
+                transform(chunk, controller) {
+                    controller.enqueue(JSON.parse(chunk));
+                }
+            });
+        }
+
+        /**
+        * Read through the results and write to the DOM
+        * @param {object} reader 
+        */
+        function writeToDOM(reader) {
+            reader.read().then(
+                ({ value, done }) => {
+                    if (done) {
+                        console.log("The stream was already closed!");
+
+                    } else {
+                        // Build up the values
+                        let result = document.createElement('div');
+                        result.innerHTML = `<div>ID: ${value.Longitude} - Phone: ${value.Latitude} - Result: ${value.Altitude}</div><br>`;
+
+                        // Prepend to the target
+                        targetDiv.insertBefore(result, targetDiv.firstChild);
+
+                        // Recursively call
+                        writeToDOM(reader);
+                    }
+                },
+                e => console.error("The stream became errored and cannot be read from!", e)
+            );
+        }
+
+        /**
+        * Fetch and process the stream
+        */
+        async function process() {
+            // Retrieve NDJSON from the server
+            const response = await fetch('http://localhost:8080/api/account/1/backup');
+
+            const results = response.body
+                // // From bytes to text:
+                .pipeThrough(new TextDecoderStream())
+                // Buffer until newlines:
+                .pipeThrough(splitStream('\n'))
+                // Parse chunks as JSON:
+                .pipeThrough(parseJSON());
+
+            // Loop through the results and write to the DOM
+            writeToDOM(results.getReader());
+        }
+
+        process();
+    </script>
 </body>
 </html>
